--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   freezed: ^2.5.7
   collection: ^1.19.0
+  firebase_auth: ^5.4.0
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
