--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   collection: ^1.19.0
   firebase_auth: ^5.4.0
   shared_preferences: ^2.3.5
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
