--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   hive: ^2.2.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
