--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/lake_background.jpg
+    - assets/images/arc_de_triomphe.png
