--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,10 @@ jobs:
             - name: Install dependencies
               run: flutter pub get
 
+            - name: Install junitreport
+              run: dart pub global activate junitreport
+            
+
             - name: Verify formatting
               run: dart format --set-exit-if-changed .
 
